mysql-db-deployment.yaml
# Deployment specification begins here
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-db
  labels:
    app: mysql-db
    tier: database
spec:
  selector: # mySQL Pod Should contain same labels
    matchLabels:
      app: mysql-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels: # Must match 'Service' and 'Deployment' selectors
        app: mysql-db
        tier: database
    spec:
      containers:
        - name: mysql-db
          image: mysql
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 3306
              name: mysql-db
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mysql-persistance-storage
      volumes:
        - name: mysql-persistance-storage
          persistentVolumeClaim:
            claimName: mysql-pv-claim
