api-students-ingress.yaml
# Ingress for api-students using nginx
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-students-ingress
spec:
  ingressClassName: nginx # use only with k8s version >= 1.18.0
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-students-service
                port:
                  number: 80
